[package]
name = "actix-cloud"
version = "0.4.3"
edition = "2021"
authors = ["MXWXZ <matrixwxz@gmail.com>"]
description = "Actix Cloud is an all-in-one web framework based on Actix Web."
license = "MIT"
readme = "../README.md"
repository = "https://github.com/MXWXZ/actix-cloud"
keywords = ["http", "web", "framework", "async", "actix"]
categories = [
    "network-programming",
    "asynchronous",
    "web-programming::http-server",
    "web-programming::websocket",
]

[features]
default = ["logger"]
all = [
    "i18n",
    "redis",
    "session",
    "config-yaml",
    "config-json",
    "config-toml",
    "response-json",
    "traceid",
    "rustls",
    "seaorm",
    "csrf",
]
serde = ["dep:serde", "dep:serde_json", "dep:serde_with"]
memorydb = ["dep:glob"]
redis = ["dep:redis", "memorydb"]
rustls = ["actix-web/rustls-0_23", "dep:rustls", "dep:rustls-pemfile"]
logger = ["dep:tracing", "dep:tracing-subscriber", "dep:colored", "serde"]
i18n = ["actix-cloud-codegen/i18n"]
session = ["dep:actix-utils", "serde", "memorydb"]
config = ["dep:config"]
config-json = ["config", "config/json"]
config-yaml = ["config", "config/yaml"]
config-toml = ["config", "config/toml"]
response = []
response-json = ["response", "serde"]
response-build = [
    "response",
    "dep:walkdir",
    "dep:yaml-rust2",
    "dep:quote",
    "dep:syn",
    "dep:prettyplease",
]
traceid = ["dep:tracing-actix-web"]
seaorm = ["actix-cloud-codegen/seaorm"]
csrf = ["dep:qstring", "dep:enum-as-inner"]

[dependencies]
actix-web = { version = "4.9.0", features = ["secure-cookies"] }
parking_lot = "0.12.3"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full"] }
async-trait = "0.1.83"
chrono = "0.4.38"
futures = "0.3.31"
anyhow = "1.0.89"
rand = "0.8.5"
hex = "0.4.3"

actix-cloud-codegen = { version = "0.2.2", path = "../actix-cloud-codegen" }

# serde
serde = { version = "1.0.210", features = ["derive"], optional = true }
serde_json = { version = "1.0.129", optional = true }
serde_with = { version = "3.11.0", optional = true }

# logger
tracing = { version = "0.1.40", optional = true }
tracing-subscriber = { version = "0.3.18", features = [
    "json",
    "parking_lot",
], optional = true }
colored = { version = "2.1.0", optional = true }

# redis
redis = { version = "0.27.4", features = [
    "tokio-rustls-comp",
    "connection-manager",
], optional = true }

# rustls
rustls = { version = "0.23.15", optional = true }
rustls-pemfile = { version = "2.2.0", optional = true }

# session
actix-utils = { version = "3.0.1", optional = true }

# config
config = { version = "0.14.0", optional = true }

# build
walkdir = { version = "2.5.0", optional = true }
yaml-rust2 = { version = "0.9.0", optional = true }
quote = { version = "1.0.37", optional = true }
syn = { version = "2.0.79", optional = true }
prettyplease = { version = "0.2.22", optional = true }

# traceid
tracing-actix-web = { version = "0.7.13", optional = true }

# memorydb
glob = { version = "0.3.1", optional = true }

# csrf
qstring = { version = "0.7.2", optional = true }
enum-as-inner = { version = "0.6.1", optional = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
